k8s/matching/matching-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-deploy
  namespace: matching
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching
  template:
    metadata:
      labels:
        app: matching
    spec:
      terminationGracePeriodSeconds: 60

      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: eks.amazonaws.com/nodegroup
                    operator: In
                    values:
                      - matching-node-group
      tolerations:
        - key: dedicated
          operator: Equal
          value: matching
          effect: NoSchedule
      containers:
        - name: matching
          image: 061039804626.dkr.ecr.ap-northeast-2.amazonaws.com/t3-wagu-matching-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "500m" #100m
              memory: "512Mi" #256Mi
            limits:
              cpu: "1000m" #500m
              memory: "1Gi" #512Mi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 15"]

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          volumeMounts:
            - name: allocator-client-cert
              mountPath: /etc/agones/allocator/client
              readOnly: true
            - name: allocator-ca-cert
              mountPath: /etc/agones/allocator/ca
              readOnly: true

      volumes:
        - name: allocator-client-cert
          secret:
            # client 시크릿
            secretName: allocator-client
        - name: allocator-ca-cert
          secret:
            # ca 시크릿
            secretName: allocator-ca
