k8s/matching/matching-internal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-internal
  namespace: matching
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  selector:
    app: matching
  ports:
    - port: 3000
      targetPort: 3000
